fix footer carousel sizes on mobile devices

--- a/src/assets/sass/layout/_footer-carousel.scss
+++ b/src/assets/sass/layout/_footer-carousel.scss
@@ -52,6 +52,7 @@
 @media (max-width: 991px) {
     .footer-carousel {
         margin-top: 30px;
+        max-width: 290px;
 
         .owl-item {
             height: 45px;
